# microscape

./: LICENSE  README.md  pyproject.toml
docs/: index.md
envs/: microscape.yaml
examples/demo/: system.yml
examples/demo/config/: metabolism.yml
examples/demo/environments/: E001.yml  E002.yml
examples/demo/microbes/: M0001.xml  M0002.xml  (+20 more)
examples/demo1/: BP.xml  FD.xml  LU.xml  demo1.yml
examples/demo2/: system.yml
microscape/: __init__.py  utils.py
microscape/cli/: build.py  community.py  constrain.py  ecology.py  evaluate.py  main.py  metabolism.py  predict.py  profile.py  train.py  validate.py  viz.py  whatif.py
microscape/config/: defaults.yml  exchanges.yml
microscape/core/: registry.py
microscape/coupling/: loop.py  loop_gsmm.py
microscape/grid/: core.py  diffusion.py  fields.py  operators.py
microscape/io/: config.py  constraint_rules.py  graph_config.py  metabolism_rules.py  microbe_registry.py  outputs.py  resources.py  sbml.py  sdp.py  spot_loader.py  system_loader.py
microscape/kinetics/: learned_nn.py  sbml_cobra.py  sbml_engine.py  toy_chain.py
microscape/metabolism/: fba.py  mp1_stub.py
microscape/objectives/: scfa_mucosa.py
microscape/profile/: ecology.py  metabolism.py
microscape/rd/: simple.py
microscape/runner/: constraints.py  simulate.py  simulate_graph.py  snapshot.py
microscape/space/: __init__.py  coarsen.py  diffusion.py  graph.py
microscape/utils/: resources.py
microscape/validate/: system.py
microscape/validation/: input.py  system.py
microscape/viz/: graph.py  plotting.py
tests/: test_smoke.py
(+474 files in other folders)
